--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
       top: 0;
       margin: 0;
     }
+    .tip {
+      display: inline-block;
+      margin-left: 16%;
+      margin-top: 4px;
+      font-size: 14px;
+    }
     #person > div {
       background: green;
       position: absolute;
@@ -48,6 +54,7 @@
 <div id="container">
   <ul id="ul"></ul>
   <button id="button">start</button>
+  <p class="tip">Tip：请使用方向键控制</p>
   <div id="score">score: 0</div>
   <div id="person"></div>
 </div>
