--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       margin: 10px;
       position: relative;
     }
-    ul {list-style: none;overflow: hidden;}
+    ul {list-style: none; overflow: hidden;}
     ul li {
       border: 1px solid #ccc;
       border-left: none;
@@ -25,6 +25,16 @@
     }
     #container > button {
       margin: 4px 0 0 4px;
+      font-size: 14px;
+      height: 32px;
+      padding: 0 1em;
+      border-radius: 4px;
+      border: 1px solid #999;
+      background: #fff;
+      cursor: pointer;
+    }
+    #container > button:hover {
+      border-color: #666;
     }
     #container .food {
       background: red;
